base/networking/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - name: sandpit
      namespace: istio-ingress
  hostnames:
    - ${env_tier}-info.sand.pit.im
  rules:
    - backendRefs:
        - name: frontend
          port: 9898
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: sandpit
      namespace: istio-ingress
  hostnames:
    - ${env_tier}-backend-info.sand.pit.im
  rules:
    - backendRefs:
        - name: backend
          port: 9898
